css/style.css
/* ... */
.project-btn-container {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
   margin-top: 24px;
   display: flex;
   justify-content: flex-start;
   gap: 8px;
}

.project-btn-container>a {
   padding: 12px 24px;
   background: #1F2021;
   color: #FFF;
   border-radius: 8px;
   transition: all ease-in-out .2s;
}

.project-btn-container>a:hover {
   background-color: #303131;
   transition: 0.3s;
}

.project-btn-container a+a {
   padding: 8px 16px;
   background: #E5E9ED;
   display: flex;
   align-items: center;
   justify-content: center;
}

.project-btn-container a+a:hover {
   background-color: #d2d7dd;
   transition: 0.3s;
}

.github-logo-project {
   height: 16px;
   width: 16px;
   background-image: url(../assets/github-cat.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: 16px;
}

/* SKILLS =================================== */
.skills {
   height: auto;
   background: #252525;
   display: flex;
   justify-content: center;
}

.skills-container {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 26px;
   margin: 32px 24px;
   flex-wrap: wrap;
}

.skills-html {
   width: 75.64px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/html5.svg);
}

.skills-css {
   width: 75.64px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/css3.svg);
}

.skills-js {
   width: 79px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/js.svg);
}

.skills-nodejs {
   width: 110.05px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/nodejs.svg);
}

.skills-react {
   width: 82.3px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/react.svg);
}

.skills-mongo {
   width: 165.53px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/mongo.svg);
}

.skills-express {
   width: 127.67px;
   height: 70px;
   background-size: cover;
   background-position: center;
   background: url(../assets/express.svg);
}

/* ABOUT =================================== */
#about {
   width: 100%;
   height: auto;
}

#fix-content-center-about {
   width: 1100px;
   height: inherit;
   margin: 0 auto;
   padding: 110px 0;
   display: flex;
   justify-content: space-between;
}

#about h3 {
   font-family: 'Inter', sans-serif;
   font-weight: 900;
   font-size: 3rem;
}

#about-bigger-p {
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   font-size: 1.375rem;
   line-height: 28px;
}

#about-smaller-p {
   font-family: 'Inter', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 23px;
}

#about h3::after {
   content: attr(data-end);
   color: #E481FD;
}

#about-text-container {
   width: 545px;
   display: flex;
   flex-direction: column;
   gap: 16px;
}

/* FORM/CONNECT =================================== */
#form-container {
   width: 50%;
}

#form {
   background-color: #1a1a1b;
   width: 100%;
   height: auto;
}

#fix-content-center-form {
   width: 1100px;
   height: auto;
   margin: 0 auto;
   padding: 110px 0;
   padding-bottom: 80px;
   display: flex;
   justify-content: space-between;
}

form label {
   padding-bottom: 10px;
   color: #EFEFEF;
   padding: 16px 0;
}

form input {
   border: 1px solid #565758;
   border-radius: 8px;
   height: 46px;
   background: transparent;
   color: white;
   padding-left: 16px;
}

form input:focus {
   outline: 1px solid white;
}

form input:hover,
form textarea:hover {
   border: 1px solid #727374;
   transition: 0.3s ease;
}

form textarea {
   border: 1px solid #565758;
   border-radius: 8px;
   background: transparent;
   color: white;
   padding-left: 16px;
   padding-top: 12px;
   font-size: 0.875rem;
   font-family: 'Inter', sans-serif;
}

form textarea:focus {
   outline: 1px solid white;
}

.form-group {
   display: flex;
   flex-direction: column;
   color: #EFEFEF;
   font-family: 'Inter', sans-serif;
   margin-bottom: 10px;
}

#form h3 {
   font-family: 'Inter', sans-serif;
   font-weight: 900;
   font-size: 3rem;
   color: #EFEFEF;
}

#form h3::after {
   content: attr(data-end);
   color: #E481FD;
}

form button {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   background: transparent;
   color: #EFEFEF;
   font-family: 'Inter', sans-serif;
   font-weight: 700;
   border: 1px solid #E481FD;
   border-radius: 8px;
   padding: 26px;
   height: 46px;
   margin-top: 40px;
   margin-right: 16px;
   transition: all ease-in-out .2s;
   cursor: pointer;
   font-size: 1rem;
}

form button:hover {
   background-color: #E481FD;
   color: #1F2021;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
}

input:-webkit-autofill {
   -webkit-text-fill-color: #EFEFEF;
}

#status {
   color: #F6F6F6;
   font-family: 'Inter', sans-serif;
   text-align: center;
   margin-bottom: 30px;
}

/* FOOTER =================================== */
footer {
   width: 100%;
   height: 65px;
   background-color: #101111;
   color: #EFEFEF;
}

footer p {
   font-family: 'Anonymous Pro', monospace;
   font-size: 0.75rem;
   padding: 24px;
   text-align: center;
   color: #727374;
}

